# Image-filtering

./: README.md
Project/: CMakeLists.txt  Colour.h  FileExplorer.cpp  FileExplorer.h  Image.cpp  Image.h  MainWindow.cpp  MainWindow.h  SaveDialogWindow.cpp  SaveDialogWindow.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
