cmake_minimum_required(VERSION 3.6)
project(Project)
set(OpenCV_DIR /home/ust.hk/jjiangan/opencv-3.1.0/build)
find_package(Qt5Widgets REQUIRED)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp)
# This is to compile main.cpp into an executable named vision_test
add_executable(main main.cpp MainWindow.cpp MainWindow.h Image.cpp Image.h SettingsWindow.cpp SettingsWindow.h Colour.cpp Colour.h FileExplorer.cpp FileExplorer.h SaveDialogWindow.cpp SaveDialogWindow.h)
target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(main Qt5::Widgets)